1.2.7 FIX: Monster stats overlapping ADD: Select gift on RTF

--- a/css/ca_pages.css
+++ b/css/ca_pages.css
@@ -2,7 +2,7 @@
  * index.php
  */
 #cageBattleNews {
-	background-image: url('http://image4.castleagegame.com/10009/graphics/battle_news_wide.jpg');
+	background-image: url('http://image4.castleagegame.com/graphics/battle_news_wide.jpg');
 	position: relative;
 	height: 184px;
 	margin-left: 1px;
